--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,10 @@ paste = "1.0.7"
 name = "main"
 crate-type = ["lib"]
 test = true
+
+[dev-dependencies]
+criterion = { version = "0.3", features = ["html_reports"] }
+
+[[bench]]
+name = "bit_numbering"
+harness = false
